--- a/src/FXML/MainDisplay.fxml
+++ b/src/FXML/MainDisplay.fxml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<?import javafx.scene.control.Label?>
-<BorderPane fx:id="borderpaneId" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1110.0" styleClass="main" stylesheets="@CSS/application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MainDisplayController">
+<BorderPane fx:id="borderpaneId" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1110.0" styleClass="main" stylesheets="@CSS/application.css" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MainDisplayController">
    <top>
       <AnchorPane layoutX="-1.0" prefHeight="92.0" prefWidth="958.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff85" height="80.0" layoutX="5.0" layoutY="6.0" stroke="BLACK" strokeType="INSIDE" width="1102.0" />
 
-            <Button fx:id="btnDestinationSearch" layoutX="14.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnDestinationSearch" prefHeight="42.0" prefWidth="106.0" text="여행지 검색" />
-            <Button fx:id="btnAroundSearch" layoutX="144.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnAroundSearch" prefHeight="42.0" prefWidth="106.0" text="주변 검색" />
+            <Button fx:id="btnDestinationSearch" layoutX="21.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnDestinationSearch" prefHeight="42.0" prefWidth="106.0" text="여행지 검색" />
+            <Button fx:id="btnAroundSearch" layoutX="146.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnAroundSearch" prefHeight="42.0" prefWidth="106.0" text="주변 검색" />
             <Button layoutX="271.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnParkingToiletSearch" prefHeight="42.0" prefWidth="106.0" text="주차장/화장실" />
-            <Button fx:id="btnStatistics" layoutX="399.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnStatistics" prefHeight="42.0" prefWidth="106.0" text="통계" />
-            <Button fx:id="btnLogout" layoutX="990.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnLogout" prefHeight="42.0" prefWidth="106.0" text="로그아웃" />
-            <Button layoutX="880.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnMypage" prefHeight="42.0" prefWidth="106.0" text="마이페이지" />
+            <Button fx:id="btnStatistics" layoutX="396.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnStatistics" prefHeight="42.0" prefWidth="106.0" text="통계" />
+            <Button fx:id="btnLogout" layoutX="986.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnLogout" prefHeight="42.0" prefWidth="106.0" text="로그아웃" />
+            <Button layoutX="866.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleBtnMypage" prefHeight="42.0" prefWidth="106.0" text="마이페이지" />
          </children>
       </AnchorPane>
    </top>
