--- a/src/FXML/Statistics.fxml
+++ b/src/FXML/Statistics.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.StatisticsController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.StatisticsController">
     <children>
-        <ComboBox fx:id="comboBoxDestination" layoutX="30.0" layoutY="118.0" prefWidth="150.0" promptText="구분"/>
-        <ComboBox fx:id="comboBoxStatistics" layoutX="194.0" layoutY="118.0" prefWidth="150.0" promptText="기준"/>
-        <Button layoutX="370.0" layoutY="118.0" mnemonicParsing="false" text="검색" />
-        <TableView layoutX="509.0" layoutY="118.0" prefHeight="329.0" prefWidth="463.0">
+        <ComboBox fx:id="comboBoxSortation" layoutX="30.0" layoutY="118.0" prefWidth="150.0" promptText="구분" />
+        <ComboBox fx:id="comboBoxStatistics" layoutX="194.0" layoutY="118.0" prefWidth="150.0" promptText="기준" />
+        <Button layoutX="370.0" layoutY="118.0" mnemonicParsing="false" onAction="#handleBtnSearch" text="검색" />
+        <TableView fx:id="myTableView" layoutX="509.0" layoutY="118.0" prefHeight="438.0" prefWidth="463.0" onMouseClicked="#doubleClickMouse">
             <columns>
-                <TableColumn fx:id="rankingColumn" prefWidth="75.0" text="No." />
-                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="이름" />
-                <TableColumn fx:id="valueColumn" prefWidth="75.0" text="값" />
+            <TableColumn fx:id="sortationColumn" prefWidth="75.0" text="구분" />
+                <TableColumn fx:id="nameColumn" prefWidth="276.0" text="여행지 이름" />
             </columns>
         </TableView>
-        <Text layoutX="30.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="통계">
+        <Text layoutX="30.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="통계">
             <font>
                 <Font size="30.0" />
             </font>
