--- a/src/FXML/mypage.fxml
+++ b/src/FXML/mypage.fxml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MypageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MypageController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="553.0" layoutX="5.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="991.0" />
-      <TableView fx:id="tv_favorite" layoutX="45.0" layoutY="78.0" prefHeight="180.0" prefWidth="348.0" onMouseClicked="#doubleClickFavorite">
+      <TableView fx:id="tv_favorite" layoutX="45.0" layoutY="78.0" onMouseClicked="#doubleClickFavorite" prefHeight="180.0" prefWidth="348.0">
         <columns>
           <TableColumn fx:id="tc_favoriteType" prefWidth="83.0" text="구분" />
           <TableColumn fx:id="tc_favoriteName" prefWidth="264.0" text="이름" />
         </columns>
       </TableView>
-      <TableView fx:id="tv_recent" layoutX="45.0" layoutY="339.0" prefHeight="180.0" prefWidth="348.0" onMouseClicked="#doubleClickRecent">
+      <TableView fx:id="tv_recent" layoutX="45.0" layoutY="339.0" onMouseClicked="#doubleClickRecent" prefHeight="180.0" prefWidth="348.0">
          <columns>
             <TableColumn fx:id="tc_recentType" prefWidth="83.0" text="구분" />
             <TableColumn fx:id="tc_recentName" prefWidth="264.0" text="이름" />
          </columns>
       </TableView>
-      <TableView fx:id="tv_review" layoutX="419.0" layoutY="260.0" prefHeight="259.0" prefWidth="553.0" onMouseClicked="#doubleClickReview">
+      <TableView fx:id="tv_review" layoutX="419.0" layoutY="260.0" onMouseClicked="#doubleClickReview" prefHeight="259.0" prefWidth="553.0">
          <columns>
             <TableColumn fx:id="tc_reviewDate" prefWidth="82.0" text="작성날짜" />
             <TableColumn fx:id="tc_reviewName" prefWidth="118.0" text="여행지 이름" />
             <TableColumn fx:id="tc_reviewContent" prefWidth="352.0" text="리뷰내용" />
          </columns>
       </TableView>
-      <Button fx:id="btn_deleteFavorite" layoutX="353.0" layoutY="53.0" mnemonicParsing="false" onAction="#deleteFavorite" text="삭제" />
-      <Button fx:id="btn_deleteReview" layoutX="932.0" layoutY="235.0" mnemonicParsing="false" onAction="#deleteReview" text="삭제" />
+      <Button fx:id="btn_deleteFavorite" layoutX="340.0" layoutY="43.0" mnemonicParsing="false" onAction="#deleteFavorite" text="삭제" />
+      <Button fx:id="btn_deleteReview" layoutX="922.0" layoutY="226.0" mnemonicParsing="false" onAction="#deleteReview" text="삭제" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#10304312" height="180.0" layoutX="419.0" layoutY="24.0" stroke="BLACK" strokeType="INSIDE" width="553.0" />
       <Text fx:id="t_id" layoutX="456.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID : ">
          <font>
