--- a/src/FXML/Nearby.fxml
+++ b/src/FXML/Nearby.fxml
@@ -1,44 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.web.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.web.WebView?>
 
-<<<<<<< HEAD
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.201"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.NearbyController">
-    <columnConstraints>
-        <ColumnConstraints/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints/>
-    </rowConstraints>
-    <children>
-        <AnchorPane prefHeight="600.0" prefWidth="1100.0">
-            <ComboBox fx:id="comboBoxClassification" layoutX="39.0" layoutY="68.0" prefWidth="150.0" promptText="구분"/>
-            <WebView fx:id="webView" layoutX="39.0" layoutY="123.0" prefHeight="445.0" prefWidth="400.0"/>
-            <TableView fx:id="myTableView" layoutX="470.0" layoutY="123.0" prefHeight="445.0" prefWidth="600.0">
-                <columns>
-                    <TableColumn fx:id="sortColumn" prefWidth="75.0" text="구분"/>
-                    <TableColumn fx:id="nameColumn" prefWidth="155.0" text="이름"/>
-                    <TableColumn fx:id="addressColumn" prefWidth="245.0" text="주소"/>
-                    <TableColumn fx:id="gradeColumn" prefWidth="45.0" text="별점"/>
-                </columns>
-            </TableView>
-            <Text layoutX="39.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주변 검색">
-                <font>
-                    <Font size="30.0"/>
-                </font>
-            </Text>
-        </AnchorPane>
-    </children>
-</GridPane>
-=======
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.NearbyController">
-    <ComboBox fx:id="comboBoxClassification" layoutX="193.0" layoutY="45.0" prefWidth="150.0" promptText="구분" />
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.NearbyController">
+    <ComboBox fx:id="comboBoxClassification" layoutX="588.0" layoutY="61.0" prefWidth="150.0" promptText="구분" />
     <WebView fx:id="webView" layoutX="30.0" layoutY="110.0" prefHeight="445.0" prefWidth="400.0" />
-    <TableView fx:id="myTableView" layoutX="453.0" layoutY="110.0" prefHeight="445.0" prefWidth="520.0">
+    <TableView fx:id="myTableView" layoutX="453.0" layoutY="110.0" prefHeight="445.0" prefWidth="520.0" onMouseClicked="#doubleClickMouse">
         <columns>
             <TableColumn fx:id="sortColumn" prefWidth="75.0" text="구분" />
             <TableColumn fx:id="nameColumn" prefWidth="155.0" text="이름" />
@@ -46,10 +22,27 @@
             <TableColumn fx:id="gradeColumn" prefWidth="45.0" text="별점" />
         </columns>
     </TableView>
-    <Text layoutX="30.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주변 검색">
+    <Text layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주변 검색">
         <font>
             <Font size="30.0" />
         </font>
     </Text>
+   <Button layoutX="932.0" layoutY="63.0" mnemonicParsing="false" onAction="#handleBtnSearch" text="검색" />
+   <Text layoutX="747.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="거리 입력">
+      <font>
+         <Font size="20.0" />
+      </font>
+   </Text>
+   <TextField fx:id="tfDistance" layoutX="841.0" layoutY="63.0" prefHeight="23.0" prefWidth="46.0" />
+   <Text layoutX="895.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="km">
+      <font>
+         <Font size="20.0" />
+      </font>
+   </Text>
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="25.0" layoutX="30.0" layoutY="62.0" stroke="BLACK" strokeType="INSIDE" width="487.0" />
+   <Text layoutX="30.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*구분 선택 및 거리 입력 후 지도 마커를 추가해주세요.">
+      <font>
+         <Font size="20.0" />
+      </font>
+   </Text>
 </AnchorPane>
->>>>>>> 창프/main
