--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
       <WebView fx:id="webView" layoutX="774.0" layoutY="13.0" prefHeight="516.0" prefWidth="314.0" />
@@ -48,7 +48,7 @@
          <font>
             <Font size="20.0" />
          </font></Text>
-      <Text fx:id="t_homePage" layoutX="59.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="홈페이지 : ">
+      <Text fx:id="t_homePage" layoutX="534.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="홈페이지 : ">
          <font>
             <Font size="20.0" />
          </font></Text>
@@ -125,11 +125,7 @@
             <Font size="13.0" />
          </font>
       </Text>
-      <Text fx:id="resultTextHomepage" layoutX="156.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-         <font>
-            <Font size="13.0" />
-         </font>
-      </Text>
       <PieChart fx:id="pieChart" layoutX="178.0" layoutY="316.0" prefHeight="210.0" prefWidth="502.0" />
+      <TextArea fx:id="resultTextHomepage" layoutX="536.0" layoutY="107.0" prefHeight="178.0" prefWidth="204.0" />
    </children>
 </AnchorPane>
