--- a/src/FXML/Toilet.fxml
+++ b/src/FXML/Toilet.fxml
@@ -12,42 +12,45 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ToiletController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ToiletController">
     <children>
         <Pane prefHeight="600.0" prefWidth="1100.0">
-            <WebView fx:id="webView" layoutX="50.0" layoutY="89.0" prefHeight="280.0" prefWidth="1000.0" />
-             <TableView fx:id="myTableView" layoutX="50.0" layoutY="350.0" prefHeight="180.0" prefWidth="1000.0">
+            <WebView fx:id="webView" layoutX="50.0" layoutY="59.0" prefHeight="280.0" prefWidth="1000.0"/>
+            <TableView fx:id="myTableView" layoutX="50.0" layoutY="340.0" prefHeight="180.0" prefWidth="1000.0">
                 <columns>
-                    <TableColumn fx:id="nameColumn" prefWidth="125.0" text="이름" />
-                    <TableColumn fx:id="addressColumn" prefWidth="294.0" text="위치" />
-                    <TableColumn fx:id="PublicColumn" prefWidth="83.0" text="남녀공용" />
-                    <TableColumn fx:id="opening_timeColumn" prefWidth="226.0" text="개방시간" />
-                    <TableColumn fx:id="managementAgencyColumn" prefWidth="271.0" text="관리기관명" />
+                    <TableColumn fx:id="nameColumn" prefWidth="125.0" text="이름"/>
+                    <TableColumn fx:id="addressColumn" prefWidth="294.0" text="위치"/>
+                    <TableColumn fx:id="PublicColumn" prefWidth="83.0" text="남녀공용"/>
+                    <TableColumn fx:id="opening_timeColumn" prefWidth="226.0" text="개방시간"/>
+                    <TableColumn fx:id="managementAgencyColumn" prefWidth="271.0" text="관리기관명"/>
                 </columns>
             </TableView>
-         <Text layoutX="50.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="거리 입력">
-            <font>
-               <Font size="20.0" />
-            </font>
-         </Text>
-         <TextField fx:id="tfDistance" layoutX="144.0" layoutY="48.0" prefHeight="23.0" prefWidth="46.0" />
-         <Text layoutX="198.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="km">
-            <font>
-               <Font size="20.0" />
-            </font>
-         </Text>
-         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="25.0" layoutX="50.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="461.0" />
-         <Text layoutX="50.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*거리 입력 후 지도 마커를 눌러주시길 바랍니다.">
-            <font>
-               <Font size="20.0" />
-            </font>
-         </Text>
+            <Text layoutX="50.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="거리 입력">
+                <font>
+                    <Font name="Cafe24 Ssurround air" size="20.0"/>
+                </font>
+            </Text>
+            <TextField fx:id="tfDistance" layoutX="144.0" layoutY="13.0" prefHeight="23.0" prefWidth="46.0"/>
+            <Text layoutX="198.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="km">
+                <font>
+                    <Font name="Cafe24 Ssurround air" size="20.0"/>
+                </font>
+            </Text>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="25.0" layoutX="269.0" layoutY="16.0"
+                       stroke="BLACK" strokeType="INSIDE" width="461.0"/>
+            <Text layoutX="272.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                  text="*거리 입력 후 지도 마커를 눌러주시길 바랍니다.">
+                <font>
+                    <Font name="Cafe24 Ssurround air" size="20.0"/>
+                </font>
+            </Text>
         </Pane>
     </children>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+    <columnConstraints>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+    </rowConstraints>
 </GridPane>
