--- a/src/FXML/beach_detail.fxml
+++ b/src/FXML/beach_detail.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.web.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" styleClass="main" stylesheets="@CSS/application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" stylesheets="@CSS/detail.css" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.BeachDetailController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
-      <WebView fx:id="webView" layoutX="774.0" layoutY="13.0" prefHeight="516.0" prefWidth="314.0" />
+      <WebView fx:id="webView" layoutX="770.0" layoutY="13.0" prefHeight="516.0" prefWidth="316.0" />
       <TableView fx:id="tv_review" layoutX="12.0" layoutY="550.0" onMouseClicked="#doubleClickMouse" prefHeight="260.0" prefWidth="744.0">
          <columns>
             <TableColumn fx:id="tc_date" prefWidth="91.99996948242188" text="날짜" />
@@ -20,13 +20,13 @@
          </columns>
       </TableView>
       <Button fx:id="btn_registerReview" layoutX="1008.0" layoutY="544.0" mnemonicParsing="false" onAction="#registerReview" text="리뷰 등록" />
+      <Button fx:id="btn_registerImg" layoutX="865.0" layoutY="544.0" mnemonicParsing="false" onAction="#registerImg" text="      " />
       <TextArea fx:id="ta_reviewContent" layoutX="769.0" layoutY="574.0" prefHeight="236.0" prefWidth="314.0" />
-      <ComboBox fx:id="cb_star" layoutX="924.0" layoutY="544.0" prefHeight="27.0" prefWidth="74.0" promptText="별점" />
+      <ComboBox fx:id="cb_star" layoutX="910.0" layoutY="544.0" prefHeight="27.0" prefWidth="80.0" promptText="별점" />
       <Text layoutX="769.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="리뷰 작성" wrappingWidth="92.0">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Button fx:id="btn_registerImg" layoutX="863.0" layoutY="544.0" mnemonicParsing="false" onAction="#registerImg" text="이미지" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="11.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
       <Text fx:id="t_name" layoutX="39.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="해수욕장명 : ">
          <font>
@@ -60,9 +60,9 @@
          <font>
             <Font size="20.0" />
          </font></Text>
-      <Button fx:id="btn_favorite" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBtnFavorite" prefHeight="56.0" prefWidth="151.0" text="즐겨찾기 등록">
+      <Button fx:id="btn_favorite" layoutX="590.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBtnFavorite" prefHeight="53.0" prefWidth="151.0" text="즐겨찾기 등록">
          <font>
-            <Font size="18.0" />
+            <Font name="Cafe24 Ssurround" size="18.0" />
          </font></Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="247.0" layoutX="12.0" layoutY="297.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
       <Text layoutX="26.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="통계">
@@ -75,19 +75,19 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <Button layoutX="25.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleBtnAgeStat" prefHeight="56.0" prefWidth="129.0" text="나이별">
+      <Button layoutX="25.0" layoutY="356.0" mnemonicParsing="false" onAction="#handleBtnAgeStat" prefHeight="50.0" prefWidth="125.0" text="나이별">
          <font>
-            <Font size="24.0" />
+            <Font name="Cafe24 Ssurround" size="24.0" />
          </font>
       </Button>
-      <Button layoutX="24.0" layoutY="411.0" mnemonicParsing="false" onAction="#handleBtnGenderStat" prefHeight="56.0" prefWidth="129.0" text="성별">
+      <Button layoutX="24.0" layoutY="420.0" mnemonicParsing="false" onAction="#handleBtnGenderStat" prefHeight="50.0" prefWidth="125.0" text="성별">
          <font>
-            <Font size="24.0" />
+            <Font name="Cafe24 Ssurround" size="24.0" />
          </font>
       </Button>
-      <Button layoutX="24.0" layoutY="476.0" mnemonicParsing="false" onAction="#handleBtnRegionStat" prefHeight="56.0" prefWidth="129.0" text="출신지별">
+      <Button layoutX="24.0" layoutY="482.0" mnemonicParsing="false" onAction="#handleBtnRegionStat" prefHeight="50.0" prefWidth="125.0" text="출신지별">
          <font>
-            <Font size="24.0" />
+            <Font name="Cafe24 Ssurround" size="24.0" />
          </font>
       </Button>
       <Text fx:id="resultTextName" layoutX="156.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
